# saas-research-platform

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
agents/: __init__.py  api_analyzer.py  auth_extractor.py  base.py  dev_portal.py  doc_finder.py  doc_parser.py  evidence_collector.py  mcp_detector.py  tiebreaker.py  verifier.py
core/: __init__.py  buildability.py  cache.py  confidence.py  config.py  exporter.py  ingestor.py  pattern_engine.py  pipeline.py  queue.py  reporter.py  scheduler.py  session.py
database/: __init__.py  connection.py  models.py  repository.py
database/migrations/: 001_initial_schema.sql  002_add_oauth_flows.sql
docs/: documentation.html  index.html  submission.html
scripts/: export_data.py  generate_sample_report.py  import_review.py  inline_assets.py  seed_apps.py  validate_report.py
templates/: agent_workflow.html  architecture.html  base.html  charts.html  insights.html  metrics.html  report.html  summary.html  table.html  table_scripts.html  verification.html
tests/: conftest.py
tests/fixtures/: expected_app_record.json  sample_apps.csv
tests/integration/: test_e2e_smoke.py  test_pipeline.py  test_reporter.py
tests/unit/: test_buildability.py  test_cache.py  test_confidence.py  test_ingestor.py  test_queue.py
tools/: __init__.py  browser_client.py  firecrawl_client.py  openai_client.py  search_client.py  url_prober.py
